# TA3D

./: .gitignore  .gitmodules  .travis.yml  README.md  appveyor.bat  appveyor.yml
docs/dev/: compilation.windows.txt  dev.txt
docs/modding/: fbi.tex
docs/user/: console.html  console_fr.html  faq.html  faq_fr.html  guide.html  guide_fr.html  index.html  index_fr.html  install.html  install_fr.html  modders.html  modders_fr.html  mods.html  mods_fr.html  multiplayer.html  (+1 more)
src/: .clang-format  .gitignore  CMakeLists.txt
src/3DMEditor/src/lua/: .gitignore
src/libs/ftgl/: CMakeLists.txt
src/libs/ftgl/src/: CMakeLists.txt
src/ta3d/: .gitignore  CMakeLists.txt  config.h.cmake  ota_resources_installer.sh  toolchain-mingw32.cmake
src/ta3d/cache/: .gitignore
src/ta3d/distrib/macos/: .gitignore
src/ta3d/distrib/windows/: ta3d-win-mingw32.nsi
src/ta3d/gui/: config_display.tdf  config_game.tdf  matt_config_display.tdf  mdrn_config_display.tdf
src/ta3d/scripts/: signals.lh  ta3d.lh
src/ta3d/scripts/console/: init.lua
src/ta3d/scripts/game/: fps.lua
src/ta3d/shaders/: 3do_shadow.frag  3do_shadow.vert  details.frag  details.vert  map_shadow.frag  map_shadow.vert
src/ta3d/src/: .gitignore  CMakeLists.txt  EngineClass.cpp  EngineClass.h  SdlContextManager.cpp  SdlContextManager.h  SdlContextManager_test.cpp  TA3D_NameSpace.cpp  TA3D_NameSpace.h  UnitEngine.cpp  UnitEngine.h  backtrace.cpp  backtrace.h  cache.cpp  cache.h  config.cpp  engine.cpp  engine.h  fbi.cpp  fbi.h  gaf.cpp  gaf.h  hpiview.cpp  install.cpp  main.cpp  read_file_parameter.cpp  read_file_parameter.h  restore.cpp  restore.h  sdl.h  stdafx.h  ta3d_string.cpp  ta3d_string.h  ta3d_string_test.cpp  ta3dbase.h  tdf.cpp  tdf.h  test_main.cpp  tnt.cpp  tnt.h
src/ta3d/src/ai/: ai.controller.cpp  ai.controller.h  ai.cpp  ai.h  ai.hxx  brain.cpp  brain.h  pathfinding.cpp  pathfinding.h  weight.cpp  weight.h
src/ta3d/src/console/: console.api.cpp  console.api.h  console.cpp  console.h
src/ta3d/src/engine/: .gitignore  mission.cpp  mission.h  mission.hxx  unit.cpp  unit.defines.h  unit.h  weapondata.h  weapondata.hxx
src/ta3d/src/gfx/: font.cpp  font.h  fx.base.cpp  fx.base.h  fx.electric.cpp  fx.electric.h  fx.h  fx.manager.cpp  fx.manager.h  fx.particle.cpp  fx.particle.h  gfx.cpp  gfx.h  gfx.toolkit.cpp  gfx.toolkit.h  gl.extensions.h  glfunc.cpp  glfunc.h  shader.cpp  shader.h  sky.cpp  sky.h  texture.cpp  texture.h  video.cpp  video.h
src/ta3d/src/gfx/gui/: area.cpp  area.h  base.cpp  base.h  object.cpp  object.h  skin.cpp  skin.h  skin.manager.cpp  skin.manager.h  skin.object.cpp  skin.object.h  text.color.cpp  text.color.h  wnd.cpp  wnd.h
src/ta3d/src/gfx/particles/: particle.h  particles.h  particlesengine.cpp  particlesengine.h  particlessystem.cpp  particlessystem.h
src/ta3d/src/ingame/: battle.cpp  battle.h  battle.init.cpp  battle.preflight.cpp  battle.renderer.cpp  battle.tools.cpp  fps.cpp  fps.h  gamedata.cpp  gamedata.h  players.cpp  players.h  players.hxx  sidedata.cpp  sidedata.h
src/ta3d/src/ingame/menus/: base.cpp  base.h  briefscreen.cpp  briefscreen.h  campaignmainmenu.cpp  campaignmainmenu.h  config.cpp  config.h  intro.cpp  intro.h  loading.cpp  loading.h  mainmenu.cpp  mainmenu.h  mapselector.cpp  mapselector.h  multimenu.cpp  multimenu.h  netmenu.cpp  netmenu.h  networkroom.cpp  networkroom.h  setupgame.cpp  setupgame.h  solo.cpp  solo.h  splash.cpp  splash.h  statistics.cpp  statistics.h  unitselector.cpp  unitselector.h  waitroom.cpp  waitroom.h
src/ta3d/src/ingame/weapons/: .gitignore  weapons.cpp  weapons.def.cpp  weapons.def.h  weapons.h  weapons.ingame.cpp  weapons.ingame.h  weapons.manager.cpp  weapons.manager.h  weapons.single.cpp  weapons.single.h
src/ta3d/src/input/: KeyboardService.cpp  KeyboardService.h  MouseService.cpp  MouseService.h  keyboard.cpp  keyboard.h  mouse.cpp  mouse.h
src/ta3d/src/languages/: i18n.cpp  i18n.h  i18n.hxx  table.cpp  table.h
src/ta3d/src/logs/: logs.cpp  logs.h  logs.hxx
src/ta3d/src/mesh/: 3dm.cpp  3dm.h  3do.cpp  3do.h  3ds.cpp  3ds.h  instancing.cpp  instancing.h  joins.cpp  joins.h  mesh.cpp  mesh.h  obj.cpp  obj.h  s3o.cpp  s3o.h  textures.cpp  textures.h
src/ta3d/src/misc/: application.cpp  application.h  bitmap.h  bvh.h  bvh.hxx  camera.cpp  camera.h  camera_test.cpp  files.cpp  files.h  geometry.cpp  geometry.h  geometry_test.cpp  grid.cpp  grid.h  grid.hxx  grid_test.cpp  hash_table.h  interface.cpp  interface.h  kdtree.h  kdtree.hxx  material.light.cpp  material.light.h  math.cpp  math.h  matrix.cpp  matrix.h  matrix_test.cpp  mempool.h  osinfo.cpp  osinfo.h  paths.cpp  paths.h  point.h  point_test.cpp  progressnotifier.h  rect.h  recttest.cpp  recttest.h  (+19 more)
src/ta3d/src/mods/: modinfo.cpp  modinfo.h  mods.cpp  mods.h
src/ta3d/src/network/: .gitignore  TA3D_Network.cpp  TA3D_Network.h  ftp.cpp  ftp.h  http.cpp  http.h  netclient.cpp  netclient.h  netclient.hxx  network.cpp  network.h  networkutils.cpp  networkutils.h  socket.broadcast.cpp  socket.broadcast.h  socket.cpp  socket.h  socket.tcp.cpp  socket.tcp.h  socket.udp.cpp  socket.udp.h  socketlist.cpp  socketlist.h  ta3dsock.cpp  ta3dsock.h
src/ta3d/src/regression/: .gitignore  CMakeLists.txt  string.cpp  tdf.cpp
src/ta3d/src/scripts/: ai.script.cpp  ai.script.h  cob.cpp  cob.h  cob.vm.cpp  cob.vm.h  draw.list.cpp  draw.list.h  lua.chunk.cpp  lua.chunk.h  lua.chunk.hxx  lua.data.cpp  lua.env.cpp  lua.env.h  lua.thread.cpp  lua.thread.h  noscript.cpp  noscript.h  script.cpp  script.data.cpp  script.data.h  script.h  script.interface.cpp  script.interface.h  unit.script.cpp  unit.script.func.cpp  unit.script.h  unit.script.interface.cpp  unit.script.interface.h
src/ta3d/src/sounds/: manager.cpp  manager.h
src/ta3d/src/threads/: mutex.cpp  mutex.h  policy.h  thread.cpp  thread.h
src/ta3d/src/vfs/: VfsService.cpp  VfsService.h  archive.cpp  archive.h  file.h  hpi.cpp  hpi.h  realfile.cpp  realfile.h  realfs.cpp  realfs.h  vfs.cpp  vfs.h  vfs.hxx  virtualfile.cpp  virtualfile.h
src/ta3d/src/zuzuf/: hashfn.h  hashmap.h  hashset.h  murmurhash2.h
